[tool.poetry]
name = "mutt-ical"
version = "2.0.0"
description = "Scripts for helping mutt deal with iCalendar data"
authors = ["Pip Gold <pip@aperiodic.net>"]
readme = "README.md"
license = {file = "LICENSE"}
packages = [{include = "mutt_ical"}]

[project.urls]
Repository = "https://github.com/asciipip/mutt-ical"
Issues = "https://github.com/asciipip/mutt-ical/issues"
Changelog = "https://github.com/asciipip/mutt-ical/blob/master/CHANGELOG.md"

[tool.poetry.dependencies]
python = "^3.9"
icalendar = ">=1.0"
tzlocal = ">=3.0"

[tool.poetry.scripts]
viewical = "mutt_ical.viewical:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
